@@ -6,6 +6,10 @@ Release 0.12.3 (not yet released)
 15. HADOOP-1162.  Fix bug in record CSV and XML serialization of
     binary values.  (Milind Bhandarkar via cutting)
 
+16. HADOOP-1123.  Fix NullPointerException in LocalFileSystem when
+    trying to recover from a checksum error.
+    (Hairong Kuang & Nigel Daley via tomwhite)
+
 
 Release 0.12.2 - 2007-23-17
 
